--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     <body style="background-color:rgb(189, 238, 243);">
         <table cellspacing = "20">
-            <tr><td><img src="C:\Users\patel\Downloads\Jaisalmer-Photo-modified.png" width="200" height="200"></td>
+            <tr><td><img src="images\Jaisalmer-Photo-modified.png" width="200" height="200"></td>
                 <td><h1>Shivangi Patel</h1><br>Pursuing Bachelor of Engineering in Information Technology </td>
             </tr>
         </table>
